--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,5 @@
 .body{
     margin: 0;
-    font-family: "Josefin Sans", sans-serif;
-
-}
-
-
-.josefin-sans-<uniquifier> {
-  font-family: "Josefin Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
 }
 
 .playwrite-fr-moderne-<uniquifier> {
@@ -82,7 +72,23 @@ a{
 .block-text{
   display: flex;
   flex-direction: column;
+  justify-content: center;
 
+}
+
+.container-cardss{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+
+}
+
+
+.cards{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 
@@ -140,59 +146,3 @@ a{
 
 
 
-.cssbuttons-io {
-    position: relative;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 18px;
-    letter-spacing: 0.05em;
-    border-radius: 0.8em;
-    cursor: pointer;
-    border: none;
-    background: linear-gradient(to right, #037c60, #05ddb1);
-    color: ghostwhite;
-    overflow: hidden;
-  }
-  
-  .cssbuttons-io svg {
-    width: 1.2em;
-    height: 1.2em;
-    margin-right: 0.5em;
-  }
-  
-  .cssbuttons-io span {
-    position: relative;
-    z-index: 10;
-    transition: color 0.4s;
-    display: inline-flex;
-    align-items: center;
-    padding: 0.8em 1.2em 0.8em 1.05em;
-  }
-  
-  .cssbuttons-io::before,
-  .cssbuttons-io::after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-  }
-  
-  .cssbuttons-io::before {
-    content: "";
-    background: #000;
-    width: 120%;
-    left: -10%;
-    transform: skew(30deg);
-    transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
-  }
-  
-  .cssbuttons-io:hover::before {
-    transform: translate3d(100%, 0, 0);
-  }
-  
-  .cssbuttons-io:active {
-    transform: scale(0.95);
-  }
-  
